added some deliverables

--- a/group.html
+++ b/group.html
@@ -144,7 +144,7 @@
         <div class="width">
             <h2 class="guide">RESULTS</h2>
             <p class="desc">
-              Below you can find the proof section of this project. You are able to filter on specific learning outcomes, and find more information about a specific deliverable by clicking on them. Most deliverables have a link at the bottom of the page, which
+              Below you can find the proof section of this project. Each deliverable has a title, and its related learning outcomes abbreviated as "LO". You can find more information about a specific deliverable by clicking on them. Most deliverables have a link at the bottom of the page, which
               reference towards its connected research document.
             </p>
             <hr>
@@ -154,7 +154,32 @@
       <div class="width">
         <section class="proof" id="proof">
           <div class="proof-content">
-            <div class="row">
+            <div class="row" onclick="window.open('groupdeliverable7.html')" style="cursor: pointer;">
+              <img src="./images/bggif.gif" alt="">
+              <div class="main-row">
+                <div class="row-text">
+                  <h2>Project Plan</h2>
+                </div>
+                <div class="learningoutcome">
+                  <h3>LO-4</h3>
+                </div>          
+              </div>
+            </div>
+
+            <div class="row" onclick="window.open('groupdeliverable3.html')" style="cursor: pointer;">
+              <img src="./images/bggif.gif" alt="">
+              <div class="main-row">
+                <div class="row-text">
+                  <h2>Testing Methods Research</h2>
+                </div>
+                <div class="learningoutcome">
+                  <h3>LO-2</h3>
+                  <h3>LO-5</h3>  
+                </div>            
+              </div>
+            </div>
+
+            <div class="row" onclick="window.open('groupdeliverable2.html')" style="cursor: pointer;">
               <img src="./images/bggif.gif" alt="">
               <div class="main-row">
                 <div class="row-text">
@@ -168,7 +193,7 @@
               </div>
             </div>
             
-            <div class="row">
+            <div class="row" onclick="window.open('groupdeliverable4.html')" style="cursor: pointer;">
               <img src="./images/bggif.gif" alt="">
               <div class="main-row">
                 <div class="row-text">
@@ -181,33 +206,8 @@
                 </div>          
               </div>
             </div>            
-            
-            <div class="row">
-              <img src="./images/bggif.gif" alt="">
-              <div class="main-row">
-                <div class="row-text">
-                  <h2>Research Methods Research</h2>
-                </div>
-                <div class="learningoutcome">
-                  <h3>LO-2</h3>
-                  <h3>LO-5</h3>  
-                </div>            
-              </div>
-            </div>
 
-            <div class="row">
-              <img src="./images/bggif.gif" alt="">
-              <div class="main-row">
-                <div class="row-text">
-                  <h2>Project Plan</h2>
-                </div>
-                <div class="learningoutcome">
-                  <h3>LO-4</h3>
-                </div>          
-              </div>
-            </div>
-
-            <div class="row">
+            <div class="row" onclick="window.open('groupdeliverable5.html')" style="cursor: pointer;">
               <img src="./images/bggif.gif" alt="">
               <div class="main-row">
                 <div class="row-text">
@@ -219,7 +219,7 @@
               </div>
             </div>
 
-            <div class="row">
+            <div class="row" onclick="window.open('groupdeliverable6.html')" style="cursor: pointer;">
               <img src="./images/bggif.gif" alt="">
               <div class="main-row">
                 <div class="row-text">
@@ -232,7 +232,7 @@
               </div>
             </div>
 
-            <div class="row">
+            <div class="row" onclick="window.open('groupdeliverable1.html')" style="cursor: pointer;">
               <img src="./images/bggif.gif" alt="">
               <div class="main-row">
                 <div class="row-text">
@@ -244,7 +244,7 @@
               </div>
             </div>
 
-            <div class="row">
+            <div class="row" onclick="window.open('groupdeliverable8.html')" style="cursor: pointer;">
               <img src="./images/bggif.gif" alt="">
               <div class="main-row">
                 <div class="row-text">
@@ -257,7 +257,7 @@
               </div>
             </div>
 
-            <div class="row">
+            <div class="row" onclick="window.open('groupdeliverable9.html')" style="cursor: pointer;">
               <img src="./images/bggif.gif" alt="">
               <div class="main-row">
                 <div class="row-text">
@@ -269,7 +269,7 @@
               </div>
             </div>
 
-            <div class="row">
+            <div class="row" onclick="window.open('groupdeliverable10.html')" style="cursor: pointer;">
               <img src="./images/bggif.gif" alt="">
               <div class="main-row">
                 <div class="row-text">
