--- a/groupdeliverable1.html
+++ b/groupdeliverable1.html
@@ -17,7 +17,7 @@
   <section id="welcome"></section>
   <nav class="navbar">
     <div class="logo">
-      <a href="homepage.html"><img src="./images/icons8-return-96.png"></a>
+      <a href="group.html"><img src="./images/icons8-return-96.png"></a>
     </div>
     <div class="toggle-button" href="#" id="menu">
       <span class="bar1"></span>
@@ -30,14 +30,72 @@
     <section id="welcome" class="product-intro">
       <h2 class="project-heading">GROUP PROJECT</h2>
       <h1 class="product-heading">PERSONAS</h1>
-      <p class="product-text">DELIVERABLE CONTAINING PERSONAS FOR GROUP PROJECT</p>
+      <p class="product-text">DELIVERABLE CONTAINING PERSONAS FOR THE GROUP PROJECT</p>
     </section>
     <div class="width">
-        <h2 class="guide">PERSONAS</h2>
+        <h2 class="guide">INTRO</h2>
         <p class="desc">
-          I used Figma for my entire designing process. This includes the wireframes, until the final prototype which has been tested with users. Using knowledge I gained on auto-layouts, styles and components during my internship, I was able to smoothly work through this process.
+          This deliverable page presents a summary on the personas that have been created for the group project. For the group project, it was initially not clear what the intended target audience was. Personas have been created in the past of the Grip on Sound project, but it was not clear to me what these personas were based on. 
+        </p>
+        <p class="desc">
+          For defining the target audience further I set up a research question myself:
+          <ul class="target-list">
+            <li>How can I clarify my intended target audience using accessible and available tools?</li>
+          </ul>
         </p>
         <hr class="version">
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <h2 class="guide">RESEARCH METHOD</h2>
+        <p class="desc">
+          By making use of <a class="menu-link line" href="https://ictresearchmethods.nl/library/literature-study/" target="_blank" rel="noopener noreferrer">literature study</a>, I quickly stumbled across a YouTube video which explained how to define your target audience in three easy steps using ChatGPT.
+        </p>
+        <hr class="version">
+      </div>
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <h2 class="guide">EXECUTION</h2>
+        <p class="desc">
+          The YouTube video allows you to define your target audience with the help of personas in just three steps (Mike Costanzo, 2023). These steps were as follows:
+          <ul class="target-list">
+            <li>My product is an app for physical education teachers who might not be aware of suffering potential hearing damage during loud gym lessons. Write a user persona.</li>
+            <li>Create a user persona for the opposite gender.</li>
+            <li>Where can I target these people online?</li>
+          </ul>
+        </p>
+        <p class="desc">After some tweaking of the information, two suitable personas were created and designed in Figma. These personas are as follows:
+        </p>
+        <div class="company">
+          <img class="deliverable" src="./images/Sarah.png">
+        </div>
+        <div class="company">
+          <img class="deliverable" src="./images/Emily.png">
+        </div>
+        <div class="company">
+          <img class="deliverable" src="./images/Michael.png">
+        </div>
+        <hr class="version">
+      </div>
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <h2 class="guide">CONCLUSION</h2>
+        <p class="desc">By now having a clearer idea on how the target audience of our app is defined, I could continue and use these personas in the <a class="menu-link line" href="groupdeliverable2.html" target="_blank" rel="noopener noreferrer">user testing plan</a>. The result of the personas caused for the following action points:
+          <ul class="target-list">
+            <li>Use personas in the user testing plan to clarify the target audience to the client and for group members.</li>
+          </ul>
+        </p> 
+        <hr class="version">
+      </div>
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <h2 class="guide">REFERENCES</h2>
+        <p class="desc">Mike Costanzo. (2023, 12 april). How to find your target audience using A.I. (ChatGPT) [Video]. YouTube. https://www.youtube.com/watch?v=KclGaQS6Txc</p>
+        <hr class="version">
+      </div>
     </div>
   </main>
   
