--- a/individual.html
+++ b/individual.html
@@ -143,7 +143,7 @@
         <div class="width">
             <h2 class="guide">RESULTS</h2>
             <p class="desc">
-              Below you can find the proof section of this project. You are able to filter on specific learning outcomes, and find more information about a specific deliverable by clicking on them. Most deliverables have a link at the bottom of the page, which
+              Below you can find the proof section of this project. Each deliverable has a title, and its related learning outcomes abbreviated as "LO". You can find more information about a specific deliverable by clicking on them. Most deliverables have a link at the bottom of the page, which
               reference towards its connected research document.
             </p>
             <hr>
@@ -153,7 +153,7 @@
       <div class="width">
         <section class="proof" id="proof">
           <div class="proof-content">
-            <div class="row">
+            <div class="row" onclick="window.open('individualdeliverable1.html')" style="cursor: pointer;">
               <img src="./images/bggif.gif" alt="">
               <div class="main-row">
                 <div class="row-text">
@@ -167,7 +167,7 @@
               </div>
             </div>
             
-            <div class="row">
+            <div class="row" onclick="window.open('individualdeliverable2.html')" style="cursor: pointer;">
               <img src="./images/bggif.gif" alt="">
               <div class="main-row">
                 <div class="row-text">
@@ -180,7 +180,7 @@
               </div>
             </div>            
             
-            <div class="row">
+            <div class="row" onclick="window.open('individualdeliverable3.html')" style="cursor: pointer;">
               <img src="./images/bggif.gif" alt="">
               <div class="main-row">
                 <div class="row-text">
@@ -193,7 +193,7 @@
               </div>
             </div>
 
-            <div class="row">
+            <div class="row" onclick="window.open('individualdeliverable7.html')" style="cursor: pointer;">
               <img src="./images/bggif.gif" alt="">
               <div class="main-row">
                 <div class="row-text">
@@ -205,7 +205,7 @@
               </div>
             </div>
 
-            <div class="row">
+            <div class="row" onclick="window.open('individualdeliverable8.html')" style="cursor: pointer;">
               <img src="./images/bggif.gif" alt="">
               <div class="main-row">
                 <div class="row-text">
@@ -218,7 +218,7 @@
               </div>
             </div>
 
-            <div class="row">
+            <div class="row" onclick="window.open('individualdeliverable4.html')" style="cursor: pointer;">
               <img src="./images/bggif.gif" alt="">
               <div class="main-row">
                 <div class="row-text">
@@ -230,7 +230,7 @@
               </div>
             </div>
 
-            <div class="row">
+            <div class="row" onclick="window.open('individualdeliverable5.html')" style="cursor: pointer;">
               <img src="./images/bggif.gif" alt="">
               <div class="main-row">
                 <div class="row-text">
@@ -243,7 +243,7 @@
               </div>
             </div>
 
-            <div class="row">
+            <div class="row" onclick="window.open('individualdeliverable6.html')" style="cursor: pointer;">
               <img src="./images/bggif.gif" alt="">
               <div class="main-row">
                 <div class="row-text">
