--- a/groupdeliverable3.html
+++ b/groupdeliverable3.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>User Research Methods Research</title>
+  <title>User Testing Methods Research</title>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />  <link rel="icon" href="./images/LogoTijn.png">
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
@@ -17,7 +17,7 @@
   <section id="welcome"></section>
   <nav class="navbar">
     <div class="logo">
-      <a href="homepage.html"><img src="./images/icons8-return-96.png"></a>
+      <a href="group.html"><img src="./images/icons8-return-96.png"></a>
     </div>
     <div class="toggle-button" href="#" id="menu">
       <span class="bar1"></span>
@@ -29,8 +29,8 @@
   <main class="product-main">
     <section id="welcome" class="product-intro">
       <h2 class="project-heading">GROUP PROJECT</h2>
-      <h1 class="product-heading">USER RESEARCH METHODS RESEARCH</h1>
-      <p class="product-text">DELIVERABLE CONTAINING PROCESS OF USER RESEARCH METHODS RESEARCH/p>
+      <h1 class="product-heading">USER TESTING METHODS RESEARCH</h1>
+      <p class="product-text">DELIVERABLE CONTAINING PROCESS OF USER RESEARCH METHODS RESEARCH</p>
     </section>
     <div class="width">
         <h2 class="guide">PERSONAS</h2>
