--- a/individualdeliverable7.html
+++ b/individualdeliverable7.html
@@ -17,7 +17,7 @@
   <section id="welcome"></section>
   <nav class="navbar">
     <div class="logo">
-      <a href="homepage.html"><img src="./images/icons8-return-96.png"></a>
+      <a href="individual.html"><img src="./images/icons8-return-96.png"></a>
     </div>
     <div class="toggle-button" href="#" id="menu">
       <span class="bar1"></span>
@@ -29,11 +29,11 @@
   <main class="product-main">
     <section id="welcome" class="product-intro">
       <h2 class="project-heading">INDIVIDUAL PROJECT</h2>
-      <h1 class="product-heading">C4 MODEL</h1>
-      <p class="product-text">DELIVERABLE CONTAINING FIRST ATTEMPT OF C4 MODEL.</p>
+      <h1 class="product-heading">PORTFOLIO DEVELOPMENT</h1>
+      <p class="product-text">DELIVERABLE CONTAINING THE DEVELOPMENT PROCESS OF THE PORTOLIO.</p>
     </section>
     <div class="width">
-        <h2 class="guide">C4 MODEL</h2>
+        <h2 class="guide">INTRO</h2>
         <p class="desc">
           I used Figma for my entired designing process. This includes the wireframes, until the final prototype which has been tested with users. Using knowledge I gained on auto-layouts, styles and components during my internship, I was able to smoothly work through this process.
         </p>
