--- a/groupdeliverable2.html
+++ b/groupdeliverable2.html
@@ -30,14 +30,119 @@
     <section id="welcome" class="product-intro">
       <h2 class="project-heading">GROUP PROJECT</h2>
       <h1 class="product-heading">USER TESTING PLAN</h1>
-      <p class="product-text">DELIVERABLE CONTAINING PROCESS OF USER TESTING PLAN</p>
+      <p class="product-text">DELIVERABLE CONTAINING PROCESS OF THE USER TESTING PLAN FOR THE GROUP PROJECT.</p>
     </section>
     <div class="width">
-        <h2 class="guide">PERSONAS</h2>
+        <h2 class="guide">INTRO</h2>
         <p class="desc">
-          I used Figma for my entire designing process. This includes the wireframes, until the final prototype which has been tested with users. Using knowledge I gained on auto-layouts, styles and components during my internship, I was able to smoothly work through this process.
+          This deliverable page presents a summary of the user research plan which has been conducted with users of the mobile app of Grip on Sound. The page gives a summary of the process which has been taken, from setting up goals to execution. It is suggested to read through this summary first for a better understanding, after which to use the button at the bottom of the page to refer to as the actual proof document. The linked research question to this deliverable is:
+          <ul class="target-list">
+            <li>How can we test the UI/UX of the app?</li>
+          </ul>
+        <hr class="version">
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <h2 class="guide">CONTEXT</h2>
+          <p class="desc">
+            After creating a design for the mobile app, it is important to validate the concept. The approach to this validation will be discussed in this deliverable. The design is an iterative process, which means that during all times designs could be tested and validated. This will lead to several testing sessions, spread out over a longer period of time. 
+          </p>
+          <div class="column">
+            <p class="company">
+              For me this meant that I had started creating this user testing plan at an early stage of the project, when the design was not even started.
+            </p>
+            <p class="company">
+              This meant that a barebones setup for the user testing plan was already there for the group, and after having decided on what to test, this would be added.
+            </p>
+          </div>
+          <hr class="version">
+      </div>
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <h2 class="guide">GOALS</h2>
+        <p class="desc">
+          The eventual goal of the user testing plan was to validate the concept. I have created several goals as SMART as possible to achieve this:
+          <ul class="target-list">
+            <li>We want to understand why a user within our target group takes certain steps to fulfill a task in our app, with the help of different testing methods, in order to understand which aspects of the usability need improvement, in sessions which will take roughly half an hour.</li>
+            <li>We want to document the flaws and pain points of our app, by using different tools, from which we can draw conclusions. This will be done during and after the research sessions.</li>
+            <li>We want to get a better understanding of our target audience, to clarify our target audience, by interacting with the user during our research sessions of approximately half an hour.</li>
+            <li>We want to understand whether we should use a one-page application or a multiple page application, by making use of several comparison testing methods, during the interactions we have with the user during our testing sessions, which will take approximately half an hour.</li>
+          </ul>
         </p>
         <hr class="version">
+      </div>
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <h2 class="guide">TARGET GROUP</h2>
+        <p class="desc">
+          The target group for this user testing plan is physical education teachers. In <a class="menu-link line" href="groupdeliverable1.html" target="_blank" rel="noopener noreferrer">personas</a>, a thorough explanation on the clarification of the target audience is given. These are the personas for the designated target audience:
+        </p>
+        <div class="company">
+          <img class="deliverable" src="./images/Sarah.png">
+        </div>
+        <div class="company">
+          <img class="deliverable" src="./images/Emily.png">
+        </div>
+        <div class="company">
+          <img class="deliverable" src="./images/Michael.png">
+        </div>
+        <hr class="version">
+      </div>
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <h2 class="guide">METHODOLOGY</h2>
+        <p class="desc">After having done research on specific research methods, and knowing what needed to be tested and validated in the app, a final decision on the testing method was made. Firstly, I will show what the requirements for the validation are:
+          <ul class="target-list">
+            <li>The homepage for the daily dose needs to be validated.</li>
+            <li>The amount and type of data on the insights need to be validated.</li>
+            <li>The calendar page overview needs to be validated.</li>
+            <li>The information on the content page needs to be clear.</li>
+            <li>The user flow and navigation should be clear and easy to use.</li>
+          </ul>
+        </p>
+        <p class="desc">After having everything prepared, the decision was made to make use of two research methods:
+          <ul class="target-list">
+            <li>Moderated User Testing.</li>
+            <li>Unmoderated User Testing.</li>
+          </ul>
+        </p>
+        <p class="desc">
+          This research document mainly focuses on the moderated user testing I have performed with several group members and its results, while the unmoderated user testing has been taken care of by other group members. The way of conducting moderated user testing is done individually between the researcher(s) and the participant.
+        </p>
+        <hr class="version">
+      </div>
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <h2 class="guide">RESULTS</h2>
+        <p class="desc">After having wrapped up five moderated user tests where I had a prominent role, I decided it was time to start analyzing the results. By making use of an <a class="menu-link line" href="https://www.nngroup.com/articles/affinity-diagram/" target="_blank" rel="noopener noreferrer">affinity diagram</a>  I categorized all of the results from the usability tests into different groups. The affinity diagram looks as follows:</p>
+        <div class="wireframe">
+          <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1130" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FoIqNVG2cKIFS9ToZsToQVz%2FTeam-Snorkelkat-Design-File%3Ftype%3Ddesign%26node-id%3D1767%253A10249%26mode%3Ddesign%26t%3DqZr5EFBGdCuRG154-1" allowfullscreen></iframe>
+        </div>
+        <hr class="version">
+      </div>
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <h2 class="guide">EVALUATION & NEXT STEPS</h2>
+        <p class="desc">After having conducted the user testing plan with several users, multiple results came forward, which lead to a list of action points for a next iteration. This action list is as follows:
+          <ul class="target-list">
+            <li>Changes on context on the pages.</li>
+            <li>Making sure the colors do not contrast and cause for confusion</li>
+            <li>Merge the insights page with the homepage, because of unclarity about the calendar page.</li>
+            <li>Change the order of the months on the month overview.</li>
+            <li>Changes to the navbar for the active pages.</li>
+          </ul>
+        </p>
+        <p class="desc">I have worked on these changes after gathering the results, from which some can be seen below:</p>
+        <div class="company">
+          <img class="deliverable" src="./images/iterations.jpg">
+        </div>
+        <hr class="version">
+      </div>
     </div>
   </main>
   
