--- a/groupdeliverable3.html
+++ b/groupdeliverable3.html
@@ -30,14 +30,68 @@
     <section id="welcome" class="product-intro">
       <h2 class="project-heading">GROUP PROJECT</h2>
       <h1 class="product-heading">USER TESTING METHODS RESEARCH</h1>
-      <p class="product-text">DELIVERABLE CONTAINING PROCESS OF USER RESEARCH METHODS RESEARCH</p>
+      <p class="product-text">DELIVERABLE CONTAINING THE PROCESS OF USER RESEARCH METHODS RESEARCH FOR THE USER TESTING PLAN.</p>
     </section>
     <div class="width">
-        <h2 class="guide">PERSONAS</h2>
+        <h2 class="guide">INTRO</h2>
         <p class="desc">
-          I used Figma for my entire designing process. This includes the wireframes, until the final prototype which has been tested with users. Using knowledge I gained on auto-layouts, styles and components during my internship, I was able to smoothly work through this process.
+          This deliverable page presents a summary of the research on user testing methods which has been done by me and another group member. It is suggested to read through this summary first for a better understanding, after which to use the button at the bottom of the page to refer to as the actual proof document. The linked research question to this deliverable is:
+          <ul class="target-list">
+            <li>How can we test the UI/UX of the app?</li>
+          </ul>
         </p>
         <hr class="version">
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <h2 class="guide">CONTEXT</h2>
+        <p class="desc">When starting out with the <a class="menu-link line" href="groupdeliverable2.html" target="_blank" rel="noopener noreferrer">user testing plan</a>, there was still no design, and I had no idea what was going to be tested. Still, I thought it was a good idea to go on the hunt for possible research methods which might be suitable for this project.</p>
+        <hr class="version">
+      </div>
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <h2 class="guide">EXECUTION</h2>
+        <p class="desc">To start, a distinction was made between several types of research methods (Rohrer, 2024):
+          <ul class="target-list">
+            <li>Attitudinal or behavioral</li>
+            <li>Moderated or unmoderated</li>
+            <li>Remote or face-to-face</li>
+          </ul>
+        </p>
+        <p class="desc">After this, several research methods were chosen for which these types are applicable:
+          <ul class="target-list">
+            <li>Usability testing</li>
+            <li>Guerrilla testing</li>
+            <li>A/B testing</li>
+            <li>Card Sorting</li>
+            <li>5-second test</li>
+            <li>Eye Tracking</li>
+            <li>Screen Recording</li>
+            <li>Contextual Inquiry</li>
+            <li>The System Usability Scale (SUS)</li>
+          </ul>
+        </p>
+        <p class="desc">By having a clear overview on what each method does, and its advantages and disadvantages, a decision on which method(s) would be used during the actual conducting of user testing would be easier to make. As for now, the list of research methods could be slimmed down to four specific research methods:
+          <ul class="target-list">
+            <li>Usability testing</li>
+            <li>A/B testing</li>
+            <li>5-second test</li>
+            <li>The System Usability Scale (SUS)</li>
+          </ul>
+        </p>
+        <hr class="version">
+      </div>
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <h2 class="guide">CONCLUSION & NEXT STEPS</h2>
+        <p class="desc">After having a clear overview on potential user testing methods, a list of action points for the rest of the project rolled out. These action points were as follows:
+          <ul class="target-list">
+            <li></li>
+          </ul>
+        </p>
+      </div>
     </div>
   </main>
   
