de grootste deliverables zijn gedaan

--- a/groupdeliverable2.html
+++ b/groupdeliverable2.html
@@ -144,6 +144,11 @@
         <hr class="version">
       </div>
     </div>
+    <div class="reveal">
+      <div class="company-btn">
+        <a onclick="window.open('https://drive.google.com/file/d/1u2LzHzJq5AT7gUMOyH_mRF5QZAIoUkvi/view?usp=sharing')" class="explore-btn">User Testing Plan Document</a>
+      </div>
+    </div>
   </main>
   
 
