--- a/groupdeliverable3.html
+++ b/groupdeliverable3.html
@@ -86,11 +86,26 @@
     <div class="reveal">
       <div class="width">
         <h2 class="guide">CONCLUSION & NEXT STEPS</h2>
-        <p class="desc">After having a clear overview on potential user testing methods, a list of action points for the rest of the project rolled out. These action points were as follows:
+        <p class="desc">After having a clear overview on potential user testing methods, a list of action points for the rest of the project rolled out. After sitting with Rose, some aspects that in her eyes needed to be looked at were added to this list of action points. These action points were as follows:
           <ul class="target-list">
-            <li></li>
+            <li>Working on the prototype for the app, and based on what needs to be tested, choose research method(s)</li>
+            <li>Cite used sources in future research documents.</li>
           </ul>
         </p>
+        <hr class="version">
+      </div>
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <h2 class="guide">REFERENCES</h2>
+        <p class="desc">
+          Rohrer, C. (2024b, januari 12). When to use Which User-Experience research methods. Nielsen Norman Group. https://www.nngroup.com/articles/which-ux-research-methods/        </p>
+        <hr class="version">
+      </div>
+    </div>
+    <div class="reveal">
+      <div class="company-btn">
+        <a onclick="window.open('https://drive.google.com/file/d/19KxvgP1lyaDxZzbwBj2XAfDwXx2LzHwH/view?usp=sharing')" class="explore-btn">Testing Methods Research Document</a>
       </div>
     </div>
   </main>
