--- a/groupdeliverable4.html
+++ b/groupdeliverable4.html
@@ -33,11 +33,88 @@
       <p class="product-text">DELIVERABLE CONTAINING MY ENTIRE DESIGN CONTRIBUTION</p>
     </section>
     <div class="width">
-        <h2 class="guide">PERSONAS</h2>
+        <h2 class="guide">INTRO</h2>
         <p class="desc">
-          I used Figma for my entire designing process. This includes the wireframes, until the final prototype which has been tested with users. Using knowledge I gained on auto-layouts, styles and components during my internship, I was able to smoothly work through this process.
+          For the designing process for the Grip on Sound mobile app, I have had several instances where my design choices were taken into accountability. 
         </p>
         <hr class="version">
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <h2 class="guide">WIREFRAMES</h2>
+        <p class="desc">
+          At the very early stages of the design phase, every group member started working on wireframes/sketches. For me, this was wireframes, since this is how I usually start designing and working out features. To start out with, everyone was focusing on what whas appealing to them. My first set of wireframes can be seen down below:
+        </p>
+        <div class="wireframe">
+          <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1130" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FoIqNVG2cKIFS9ToZsToQVz%2FTeam-Snorkelkat-Design-File%3Ftype%3Ddesign%26node-id%3D1799%253A12491%26mode%3Ddesign%26t%3DqZr5EFBGdCuRG154-1" allowfullscreen></iframe>
+        </div>
+        <p class="desc">As it shows, my interest was leaning towards a calendar page. Adding and removing activities to your planner was something I had thoroughly worked out. Perhaps this was even too thorough for wireframes, but I had some more time compared to other group members to work on these wireframes, which caused me to work them out a bit further.
+          My wireframes already had specific features implemented, which mainly were:
+          <ul class="target-list">
+            <li>A date slider.</li>
+            <li>Forms for adding/removing activities.</li>
+          </ul>
+        </p>
+        <p class="desc">I have used several sources of inspiration for these features, which have been put into moodboards:</p>
+        <div class="company">
+          <img class="deliverable" src="./images/inspo1.png">
+        </div>
+        <div class="company">
+          <img class="deliverable" src="./images/inspo2.png">
+        </div>
+        <hr class="version">
+      </div>
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <p class="desc">
+          After everyone had finished their wireframes, a meeting with our stakeholder Dennis, and intern Munira was held to come up with a requirements list for the app. The minimal requirements that Dennis wished for were:
+          <ul class="target-list">
+            <li>Daily dose weergeven -> aangeven via een melding wanneer het in kritieke staat is.</li>
+            <li>Overzicht lessen dag & week (vergelijken en inzicht krijgen van lessen/dagen/weken, timeline in dag overzicht).</li>
+            <li>Educatie scherm met tips voor “wat als”.</li>
+            <li>Onboarding, verduidelijken van begrippen zoals Daily Dose.</li>
+          </ul>
+        </p>
+        <hr class="version">
+      </div>
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <h2 class="guide">MOCKUPS</h2>
+        <p class="desc">
+          After knowing this, and finishing up the corporate identity for the app, mockups of the apps could be created. However, first decisions needed to be made on what features of who would be taken into the design. I am glad to say that pretty much my entire calendar page (minus the adding/removing feature since this was not part of the requirements) was taken to the final design. 
+        </p>
+        <div class="company">
+          <img class="deliverable" src="./images/firstversions.png">
+        </div>
+        <p class="desc">Here you can see the first iterations I made of the design for the calendar page. These were all still very dummy, but were eventually taken into the final prototype as well.</p>
+        <hr class="version">
+      </div>
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <h2 class="guide">PROTOTYPING</h2>
+        <p class="desc">When the group started prototyping, and merging mockups together, was when I really felt my task in the group coming forward. I of course already had impact on the design of the app itself, but before prototyping everybody was still working in their own pages. When prototyping however, working in team-form in Figma can be quite tricky.</p>
+        <p class="desc">I was glad that my internship was really in-depth in Figma, which helped me to guide the other group members to work with styles, components and auto-layouts. I am glad that I could have passed on the knowledge I had about Figma to group members, while still learning in the process as well.</p>
+        <p class="desc">Below you can see the final version of the calendar page with my features integrated:</p>
+        <div class="company">
+          <img class="deliverable" src="./images/finalcalendar.png">
+        </div>
+        <p class="desc">Something that was also recurring, was that the date slider I created was present in most pages of the app:</p>
+        <div class="company">
+          <img class="deliverable" src="./images/dd.png">
+        </div>
+        <hr class="version">
+      </div>
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <p class="desc">After everything was linked together, a final prototype was ready for testing. After several iterations, this is the final prototype of the app which you can navigate through below:</p>
+        <div class="wireframe">
+          <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1130" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FoIqNVG2cKIFS9ToZsToQVz%2FTeam-Snorkelkat-Design-File%3Fpage-id%3D2%253A16%26type%3Ddesign%26node-id%3D1548-10369%26viewport%3D-614%252C-12487%252C0.73%26t%3DDWe2IX7abRpuztJG-1%26scaling%3Dscale-down%26starting-point-node-id%3D1548%253A10369%26mode%3Ddesign" allowfullscreen></iframe>
+        </div>
+      </div>
     </div>
   </main>
   
