--- a/individualdeliverable3.html
+++ b/individualdeliverable3.html
@@ -56,9 +56,9 @@
   <div class="reveal">
     <div class="width">
       <h2 class="guide">RESEARCH QUESTIONS</h2>
-      <p class="desc">For this project, I have a main reseqrch question:
+      <p class="desc">For this project, I have a main research question:
         <ul class="target-list">
-          <li>Hoe presenteer ik mezelf als professioneel media designer in een helder en gestructureerd portfolio?</li>
+          <li>How do I present myself as a professional media designer in a clear and structured portfolio?</li>
         </ul>
       </p>
       <p class="desc">There are also multiple subquestions which have been answered in other deliverables in the portfolio. The subquestions in this project plan are as follows:
